[gd_scene load_steps=4 format=3 uid="uid://btk03axb83wiy"]

[ext_resource type="Script" path="res://fish/fish.gd" id="1_a1teu"]
[ext_resource type="Texture2D" uid="uid://8fne0x4urtxd" path="res://fish/speech_bubble.png" id="2_rmwwk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pv7c4"]
radius = 25.0

[node name="Fish" type="CharacterBody2D"]
z_index = 2
z_as_relative = false
input_pickable = true
motion_mode = 1
script = ExtResource("1_a1teu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pv7c4")

[node name="FishSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="SpeechBubbleSprite" type="Sprite2D" parent="."]
position = Vector2(37, -53)
texture = ExtResource("2_rmwwk")

[node name="DestinationSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(37, -55)
scale = Vector2(0.5, 0.5)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="received_type" from="." to="." method="_on_received_type"]
